# PyLabs

./: .gitignore  README.md
1lab/: README.md  pyproject.toml
1lab/src/task_platform/: __init__.py  contracts.py  models.py  receiver.py  sources.py
1lab/src/task_platform_lab1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
1lab/tests/: test_contracts.py  test_receiver.py  test_sources.py
2lab/: README.md  pyproject.toml
2lab/src/task_platform/: __init__.py  descriptors.py  exceptions.py  models.py
2lab/tests/: test_descriptors.py  test_models.py
3lab/: README.md  pyproject.toml
3lab/src/task_platform/: __init__.py  models.py  queue.py
3lab/tests/: test_queue.py
4lab/: README.md  pyproject.toml
4lab/src/task_platform/: __init__.py  executor.py  handlers.py  protocols.py
4lab/tests/: test_executor.py  test_protocols.py
