[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "task-platform-lab1"
version = "0.1.0"
description = "Laboratory work #1: task sources and contracts"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "kontar" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=5.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=task_platform --cov-report=term-missing --cov-fail-under=80"
